# poetry2nix_ipykernel_bug

./: pyproject.toml  shell.nix
