[tool.poetry]
name = "poetry2nix_ipykernel_bug"
version = "0.1.0"
description = ""
authors = ["Kevin Wang <1149450+wangkev@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^5.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
